# skeletal_animation

./: CMakeLists.txt  LICENSE
inc/: material.hpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp
res/shaders/: basic.frag  basic.vert
src/: main.cpp
